--- a/Contact.html
+++ b/Contact.html
@@ -516,6 +516,9 @@ footer {
             width: 100%;
             background-color: #d87635c0;
         }
+        header {
+            padding: 0px;
+        }
 </style>
 </head>
 <body>
