--- a/Location.html
+++ b/Location.html
@@ -21,38 +21,18 @@
       font-size: 1.5em;
       margin-bottom: 30px;
     }
+    
     iframe {
       border: 5px transparent
       border-radius: 15px;
       box-shadow: 0 0 20px transparent;
     }
+
     .quote {
       font-size: 1.3em;
       margin-top: 30px;
       font-style: italic;
     }
-    .logo-container {
-    display: flex;
-    align-items: center;
-}
-
-.logo {
-    max-height: 90px;
-    margin-right: 60px;
-}
-
-.colorful-name {
-    font-size: 1.5em;
-    margin: 0;
-    animation: color-change 5s infinite alternate; /* Apply color change animation */
-}
-@keyframes color-change {
-    0% { color: #ff6b6b; }
-    25% { color: #feca57; }
-    50% { color: #48dbfb; }
-    75% { color: #6ab04c; }
-    100% { color: #e056fd; }
-}
 footer {
             background-color:transparent;
             color: white;
@@ -84,38 +64,6 @@ footer {
             width: 100%;
             z-index: 20;
         }
-
-        .logo-container {
-            display: flex;
-            align-items: center;
-        }
-
-        .logo {
-            max-height: 90px;
-            margin-right: 60px;
-        }
-
-        .colorful-name {
-            font-size: 2em;
-            margin: 0;
-            animation: color-change 5s infinite alternate;
-        }
-
-        @keyframes color-change {
-            0% { color: #ff6b6b; }
-            25% { color: #feca57; }
-            50% { color: #48dbfb; }
-            75% { color: #6ab04c; }
-            100% { color: #e056fd; }
-        }
-
-        nav ul {
-            list-style: none;
-            padding: 5;
-            margin: 5;
-            display: flex;
-        }
-
         nav ul li {
             margin-right: 30px;
         }
@@ -218,17 +166,6 @@ footer {
             padding-bottom: 10px;
             margin-bottom: 15px;
         }
-
-        body {
-            background: linear-gradient(135deg, #f6d365 0%, #fda085 100%);
-            font-family: 'Comic Sans MS', cursive, sans-serif;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-            margin: 0;
-        }
-
-
         .logo-container {
             display: flex;
             align-items: center;
@@ -485,12 +422,11 @@ footer {
       <input type="text" id="menuSearch" placeholder="Search Menu...">
       <button type="submit" id="searchButton">Search</button>
     </div>
-    <div id="search-results-container" class="hidden">
-    </div>
   </header>
+  <main class="menu-page">
   <h1>Welcome to Berna's Delicios Hot Dogs & Tacos!</h1>
   <p>"Where every bite is a fiesta in your mouth!"</p>
-
+  </main>
   <div class="map-container">
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3788.009824360013!2d-88.5174304!3d18.3011589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f5bed40dbe9815d%3A0x8d8076c901b2b162!2sBerna's%20delicios%20Hot%20dog%20%26%20tacos!5e0!3m2!1sen!2sbz!4v1744563153554!5m2!1sen!2sbz"
