--- a/mission.html
+++ b/mission.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/all.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
 <style>
-body {
-            margin: 0;
+ body {
             font-family: sans-serif;
-            overflow-x: hidden;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
+            line-height: 1.6;
+            background-image: url(image41.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+            position: relative;
         }
 
         header {
